unpackaged/main/default/objects/Opportunity/fields/Amount_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_Inc_VAT__c</fullName>
    <formula>Amount +  VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Inc. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>