unpackaged/main/default/objects/Opportunity/fields/Chicken__c.field-meta.xml
<CustomField>
    <fullName>Chicken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chicken</label>
    <type>Checkbox</type>
</CustomField>