unpackaged/main/default/objects/Opportunity/fields/Credit_Note_Approver__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Note Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>