unpackaged/main/default/objects/Opportunity/fields/Credit_Note_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Number__c</fullName>
    <label>Credit Note Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>