unpackaged/main/default/objects/Opportunity/fields/Dairy__c.field-meta.xml
<CustomField>
    <fullName>Dairy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dairy</label>
    <type>Checkbox</type>
</CustomField>