unpackaged/main/default/objects/Opportunity/fields/Days_in_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Qualification__c</fullName>
    <formula>IF(
AND(ISBLANK( SRM_PP_Qualification_End_Date__c),
NOT(ISBLANK( SRM_PP_Qualification_Start_Date__c))),
Today() - SRM_PP_Qualification_Start_Date__c,
SRM_PP_Qualification_End_Date__c- SRM_PP_Qualification_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Qualification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>