unpackaged/main/default/objects/Opportunity/fields/Eggs__c.field-meta.xml
<CustomField>
    <fullName>Eggs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eggs</label>
    <type>Checkbox</type>
</CustomField>