unpackaged/main/default/objects/Opportunity/fields/ia_crm__Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If necessary, populate this with Reseller Account. Please note that the value needs to be equal to Account.Bill To Account. When creating a Contract from the &#39;Create Contract&#39; button or a sales transaction, the Account gets defaulted with this value.</inlineHelpText>
    <label>Bill to Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Account.ia_crm__Reseller_Type__c</field>
            <operation>contains</operation>
            <valueField>Account.Type</valueField>
        </filterItems>
        <filterItems>
            <field>Account.ia_crm__Reseller_Type__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Channel Partner / Reseller</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>