unpackaged/main/default/objects/Opportunity/fields/ia_crm__Budget_hours__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Budget_hours__c</fullName>
    <label>Budget hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>