unpackaged/main/default/objects/Opportunity/fields/ia_crm__Change_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New MRR</fullName>
                <default>true</default>
                <label>New MRR</label>
            </value>
            <value>
                <fullName>Add on MRR</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>