unpackaged/main/default/objects/Opportunity/fields/ia_crm__Contract_Validation__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Validation__c</fullName>
    <formula>IF(AND(RecordType.Name = &#39;Contract&#39;, OR( ISBLANK( ContractId ), ISBLANK( AccountId ))), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;, 15, 15), IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;&quot;, 15, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Validation</label>
    <type>Text</type>
</CustomField>