unpackaged/main/default/objects/Opportunity/fields/ia_crm__Contract_Validation_Missing_Fields__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Validation_Missing_Fields__c</fullName>
    <formula>IF(AND(RecordType.Name = &#39;Contract&#39;, OR(ContractId = &quot;&quot;, AccountId = &quot;&quot;)), &quot;Contract or Account are missing.&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Validation Missing Fields</label>
    <type>Text</type>
</CustomField>