unpackaged/main/default/objects/Opportunity/fields/ia_crm__Corp_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Corp_Currency_Amount__c</fullName>
    <label>Corp Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>