unpackaged/main/default/objects/Opportunity/fields/ia_crm__Intacct_Location__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Intacct Location for Products</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Intacct_Entity__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
    <relationshipLabel>Opportunities (Intacct Location)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>