unpackaged/main/default/objects/Opportunity/fields/ia_crm__Intacct_Transaction__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Transaction__c</fullName>
    <label>Intacct Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Invoice</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
            <value>
                <fullName>Sales Quote</fullName>
            </value>
            <value>
                <fullName>Sales Credit Note</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>