unpackaged/main/default/objects/Opportunity/fields/ia_crm__Intacct_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Transaction_ID__c</fullName>
    <label>Intacct Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>