unpackaged/main/default/objects/Opportunity/fields/ia_crm__IsContractRenewed__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__IsContractRenewed__c</fullName>
    <formula>false</formula>
    <label>IsContractRenewed</label>
    <type>Checkbox</type>
</CustomField>