unpackaged/main/default/objects/Opportunity/fields/ia_crm__Project_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_ID__c</fullName>
    <label>Template Project ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3COM01</fullName>
            </value>
            <value>
                <fullName>AMAZ01</fullName>
            </value>
            <value>
                <fullName>BLK0901</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>