unpackaged/main/default/objects/Opportunity/fields/ia_crm__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Type__c</fullName>
    <inlineHelpText>This is a standard field in Intacct, you can customize the available values in Intacct. The values in Salesforce must match the values in Intacct in order for it to map.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>