unpackaged/main/default/objects/Opportunity/fields/ia_crm__Project_Type_List__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Project_Type_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ia_crm__Project_Type__c.ia_crm__Hidden__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ia_crm__Project_Type__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>