unpackaged/main/default/objects/Opportunity/fields/ia_crm__SFDC_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SFDC_Contract_Id__c</fullName>
    <formula>CASESAFEID(ContractId)</formula>
    <label>SFDC Contract ID</label>
    <type>Text</type>
</CustomField>