unpackaged/main/default/objects/Opportunity/fields/ia_crm__SFDC_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SFDC_Opportunity_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>SFDC Opportunity ID</label>
    <type>Text</type>
</CustomField>