unpackaged/main/default/objects/Opportunity/fields/ia_crm__Ship_to__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Ship to)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>