unpackaged/main/default/objects/Opportunity/fields/ia_crm__Synced_With_Intacct_Date_1__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Synced_With_Intacct_Date_1__c</fullName>
    <label>Synced With Intacct Date</label>
    <type>DateTime</type>
</CustomField>