unpackaged/main/default/objects/Opportunity/fields/ia_crm__Validation_Errors__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Validation_Errors__c</fullName>
    <label>Validation Errors</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>