unpackaged/main/default/objects/Opportunity/fields/Intacct_Application__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Application__c</fullName>
    <label>Intacct Application</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>