unpackaged/main/default/objects/Opportunity/fields/Likelihood_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_Opportunity__c</fullName>
    <label>Likelihood of Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>