unpackaged/main/default/objects/Opportunity/fields/Salmon__c.field-meta.xml
<CustomField>
    <fullName>Salmon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salmon</label>
    <type>Checkbox</type>
</CustomField>