unpackaged/main/default/objects/Opportunity/fields/Sheep__c.field-meta.xml
<CustomField>
    <fullName>Sheep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sheep</label>
    <type>Checkbox</type>
</CustomField>