unpackaged/main/default/objects/Opportunity/fields/SRM_PP_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who the account manager is for the supporter</description>
    <inlineHelpText>Who the account manager is for the supporter</inlineHelpText>
    <label>Partnerships Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>