unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Approach_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Approach_End_Date__c</fullName>
    <description>End date of Approach Stage (accounts)</description>
    <label>Approach End Date</label>
    <type>Date</type>
</CustomField>