unpackaged/main/default/objects/Opportunity/fields/SRM_PP_Approach_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_Approach_Start_Date__c</fullName>
    <description>Start date of Approach Stage</description>
    <label>Approach Start Date</label>
    <type>Date</type>
</CustomField>