unpackaged/main/default/objects/Opportunity/fields/SRM_PP_ApproachDate__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_ApproachDate__c</fullName>
    <description>Timestamp start date for 4th stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Approach</inlineHelpText>
    <label>Approach Date</label>
    <type>Date</type>
</CustomField>