unpackaged/main/default/objects/Opportunity/fields/SRM_PP_AskContract__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_AskContract__c</fullName>
    <description>Timestamp start date for 7th stage in P and P Pipeline</description>
    <inlineHelpText>Date-stamped when the stage is changed to Ask / Contract</inlineHelpText>
    <label>Ask / Contract Date</label>
    <type>Date</type>
</CustomField>