unpackaged/main/default/objects/Opportunity/fields/SRM_PP_BioNotes__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_BioNotes__c</fullName>
    <description>Relevant details to describe the supporter - background summary</description>
    <inlineHelpText>Relevant details to describe the supporter - background summary</inlineHelpText>
    <label>Bio Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>