unpackaged/main/default/objects/Opportunity/fields/SRM_PP_ClosedReason__c.field-meta.xml
<CustomField>
    <fullName>SRM_PP_ClosedReason__c</fullName>
    <description>Reason the record status has been closed</description>
    <inlineHelpText>Reason the record status has been closed</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Established supplier</fullName>
                <label>Established Supplier</label>
            </value>
            <value>
                <fullName>Volume Availability</fullName>
            </value>
            <value>
                <fullName>Species Availability</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Conflicting Priorities</fullName>
            </value>
            <value>
                <fullName>Other certification</fullName>
                <label>Other Certification</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Connection broken</fullName>
                <isActive>false</isActive>
                <label>Connection broken</label>
            </value>
            <value>
                <fullName>Contact deceased</fullName>
                <isActive>false</isActive>
                <label>Contact deceased</label>
            </value>
            <value>
                <fullName>No further financial support</fullName>
                <isActive>false</isActive>
                <label>No further financial support</label>
            </value>
            <value>
                <fullName>Organisation dissolved</fullName>
                <isActive>false</isActive>
                <label>Organisation dissolved</label>
            </value>
            <value>
                <fullName>Prospect disqualified</fullName>
                <isActive>false</isActive>
                <label>Prospect disqualified</label>
            </value>
            <value>
                <fullName>Prospect disqualified - pass to other team</fullName>
                <isActive>false</isActive>
                <label>Prospect disqualified - pass to other team</label>
            </value>
            <value>
                <fullName>RSPCA approach unsuccessful</fullName>
                <isActive>false</isActive>
                <label>RSPCA approach unsuccessful</label>
            </value>
            <value>
                <fullName>Request do not contact</fullName>
                <isActive>false</isActive>
                <label>Request do not contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>